force-app/main/default/objects/Case/fields/Actual_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Trial_Date__c</fullName>
    <formula>Booking__r.Booking_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Trial Date from related Trial Booking</inlineHelpText>
    <label>Actual Trial Date</label>
    <type>Date</type>
</CustomField>