force-app/main/default/objects/Case/fields/Booking_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cancellation_Reason__c</fullName>
    <formula>TEXT( Booking__r.Cancellation_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Cancellation Reason</label>
    <type>Text</type>
</CustomField>