force-app/main/default/objects/Case/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>TEXT( DAY(  Booking__r.Booking_Date__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Calendar Date</label>
    <type>Text</type>
</CustomField>