force-app/main/default/objects/Case/fields/Booking_Day__c.field-meta.xml
<CustomField>
    <fullName>Booking_Day__c</fullName>
    <formula>CASE(WEEKDAY(  Booking__r.Booking_Date__c  ), 
1, &apos;Sun&apos;, 
2, &apos;Mon&apos;, 
3, &apos;Tue&apos;, 
4, &apos;Wed&apos;, 
5, &apos;Thu&apos;, 
6, &apos;Fri&apos;, 
&apos;Sat&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Day</label>
    <type>Text</type>
</CustomField>