force-app/main/default/objects/Case/fields/Booking_Duration__c.field-meta.xml
<CustomField>
    <fullName>Booking_Duration__c</fullName>
    <formula>If( ISPICKVAL(  Booking__r.Package__r.Duration__c , &apos;Trial&apos;)  , value(&apos;30&apos;),  

value(Text(Booking__r.Package__r.Duration__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>