force-app/main/default/objects/Case/fields/Booking_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Booking_Instrument__c</fullName>
    <description>Booking Field: Instrument Lesson
This field is used in Case Macros Templates</description>
    <formula>Booking__r.Instrument_Lesson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Instrument</label>
    <type>Text</type>
</CustomField>