force-app/main/default/objects/Case/fields/Booking_Make_Up_Credit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Make_Up_Credit__c</fullName>
    <formula>Booking__r.Available_Make_up_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Make-Up Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>