force-app/main/default/objects/Case/fields/Booking_Make_Up_Credit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Booking_Make_Up_Credit_Expiry__c</fullName>
    <formula>TEXT(DAY(Booking__r.Make_up_Expiry_Date__c))+&apos; &apos;+ 
CASE(MONTH(Booking__r.Make_up_Expiry_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)
+ &apos; &apos; 
+ TEXT(YEAR(Booking__r.Make_up_Expiry_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Make-Up Credit Expiry</label>
    <type>Text</type>
</CustomField>