force-app/main/default/objects/Case/fields/Booking_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Booking_Teacher__c</fullName>
    <formula>Booking__r.Teacher_Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Teacher</label>
    <type>Text</type>
</CustomField>