force-app/main/default/objects/Case/fields/Booking_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time__c</fullName>
    <formula>TIMEVALUE( Booking__r.Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Time</label>
    <type>Time</type>
</CustomField>