force-app/main/default/objects/Case/fields/Booking_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Year__c</fullName>
    <formula>TEXT( YEAR( Booking__r.Booking_Date__c ) )</formula>
    <label>Booking Year</label>
    <type>Text</type>
</CustomField>