force-app/main/default/objects/Case/fields/Case_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Case_Assignment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Help to assign the case in appropriate Queue</description>
    <inlineHelpText>Help to assign the case in appropriate Queue</inlineHelpText>
    <label>Case Assignment</label>
    <type>Checkbox</type>
</CustomField>