force-app/main/default/objects/Case/fields/Centre_Address__c.field-meta.xml
<CustomField>
    <fullName>Centre_Address__c</fullName>
    <formula>Centre_Name__r.BillingStreet &amp; &quot; &quot; &amp; Centre_Name__r.BillingCity &amp; &quot; &quot; &amp; Centre_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Address</label>
    <type>Text</type>
</CustomField>