force-app/main/default/objects/Case/fields/Centre_Email__c.field-meta.xml
<CustomField>
    <fullName>Centre_Email__c</fullName>
    <formula>Centre_Name__r.Center_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Email</label>
    <type>Text</type>
</CustomField>