force-app/main/default/objects/Case/fields/Centre_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Centre_Name_Formula__c</fullName>
    <description>Centre_Name_Formula</description>
    <formula>Centre_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Name F</label>
    <type>Text</type>
</CustomField>