force-app/main/default/objects/Case/fields/Closed_by_Self_Service_User__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Self_Service_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed by Self-Service User</label>
    <type>Checkbox</type>
</CustomField>