force-app/main/default/objects/Case/fields/Current_Deposit_on_File__c.field-meta.xml
<CustomField>
    <fullName>Current_Deposit_on_File__c</fullName>
    <label>Current Deposit on File</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>