force-app/main/default/objects/Case/fields/deposit_Topup__c.field-meta.xml
<CustomField>
    <fullName>deposit_Topup__c</fullName>
    <label>Deposit Topup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>