force-app/main/default/objects/Case/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>To be updated by system WF when a Trial is converted to an Enrollment (Sales Stage)</description>
    <inlineHelpText>When the Sales Stage was updated as &apos;Enrolled&apos;</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>