force-app/main/default/objects/Case/fields/Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Enrolment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>