force-app/main/default/objects/Case/fields/Enrolment_ID__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_ID__c</fullName>
    <formula>Enrolment__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolment ID</label>
    <type>Text</type>
</CustomField>