force-app/main/default/objects/Case/fields/Enrolment_Source__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Source__c</fullName>
    <description>To store enrolment source in case object from enrolment object</description>
    <label>Enrolment Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>