force-app/main/default/objects/Case/fields/Form_Name1__c.field-meta.xml
<CustomField>
    <fullName>Form_Name1__c</fullName>
    <description>Value from related Lead. Used for Sales Enq reporting
To be used in reports</description>
    <formula>IF (NOT(ISBLANK( Form_Name__c )),Form_Name__c,
IF(NOT(ISBLANK( Lead__c )), Lead__r.Form_Name__c,
&quot;Website&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>