force-app/main/default/objects/Case/fields/How_did_you_hear_about_Aureus_Academy__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Aureus_Academy__c</fullName>
    <description>How did you hear about Aureus Academy?</description>
    <label>How did you hear about Aureus Academy?</label>
    <type>TextArea</type>
</CustomField>