force-app/main/default/objects/Case/fields/How_many_days_would_you_like__c.field-meta.xml
<CustomField>
    <fullName>How_many_days_would_you_like__c</fullName>
    <label>How many days would you like?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>