force-app/main/default/objects/Case/fields/Invoice_for_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Invoice_for_Current_Month__c</fullName>
    <label>Invoice for Current Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>