force-app/main/default/objects/Case/fields/Last_Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Email__c</fullName>
    <label>Last Inbound Email</label>
    <type>DateTime</type>
</CustomField>