force-app/main/default/objects/Case/fields/Last_Lesson_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lesson_Date__c</fullName>
    <formula>Enrolment__r.Effective_Date__c</formula>
    <label>Last Lesson Date</label>
    <type>Date</type>
</CustomField>