force-app/main/default/objects/Case/fields/Last_Lesson_day__c.field-meta.xml
<CustomField>
    <fullName>Last_Lesson_day__c</fullName>
    <formula>TEXT(DAY(Last_Lesson_Date__c)) +&apos; &apos;+CASE(MONTH( Last_Lesson_Date__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
    <label>Last Lesson day</label>
    <type>Text</type>
</CustomField>