force-app/main/default/objects/Case/fields/Last_Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Outbound_Email__c</fullName>
    <label>Last Outbound Email</label>
    <type>DateTime</type>
</CustomField>