force-app/main/default/objects/Case/fields/Learning_Style__c.field-meta.xml
<CustomField>
    <fullName>Learning_Style__c</fullName>
    <label>Learning Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Learning_Style</valueSetName>
    </valueSet>
</CustomField>