force-app/main/default/objects/Case/fields/Leave_End_Date_Day_Part__c.field-meta.xml
<CustomField>
    <fullName>Leave_End_Date_Day_Part__c</fullName>
    <formula>TEXT( DAY( Leave_End_Date__c) )</formula>
    <label>Leave End Date Day Part</label>
    <type>Text</type>
</CustomField>