force-app/main/default/objects/Case/fields/Leave_Start_Date_Day_Part__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Date_Day_Part__c</fullName>
    <formula>TEXT( DAY(  Leave_Start_Date__c  ) )</formula>
    <label>Leave Start Date Day Part</label>
    <type>Text</type>
</CustomField>