force-app/main/default/objects/Case/fields/Lesson_Charge_Topup__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Charge_Topup__c</fullName>
    <label>Lesson Charge Topup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>