force-app/main/default/objects/Case/fields/Lesson_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Day_Time__c</fullName>
    <formula>Text(Enrolment__r.Lessons_Start_Date__c)  &amp;  Text(Enrolment__r.Lesson_Start_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson Day &amp; Time</label>
    <type>Text</type>
</CustomField>