force-app/main/default/objects/Case/fields/Lesson_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Package_Name__c</fullName>
    <formula>Booking__r.Package__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson/Package Name</label>
    <type>Text</type>
</CustomField>