force-app/main/default/objects/Case/fields/Lesson_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Start_Date__c</fullName>
    <description>Updated by Trigger: EnrolmentTriggerHandler</description>
    <inlineHelpText>Related Enrolment: Lesson Start Date</inlineHelpText>
    <label>Lesson Start Date</label>
    <type>Date</type>
</CustomField>