force-app/main/default/objects/Case/fields/Lesson_Type__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Type__c</fullName>
    <formula>( Enrolment__r.Package__r.Instrument__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson Type</label>
    <type>Text</type>
</CustomField>