force-app/main/default/objects/Case/fields/MC_Received__c.field-meta.xml
<CustomField>
    <fullName>MC_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to mark &apos;TRUE&apos; when MC received from student.</description>
    <label>MC Received</label>
    <type>Checkbox</type>
</CustomField>