force-app/main/default/objects/Case/fields/New_Center__c.field-meta.xml
<CustomField>
    <fullName>New_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for store new changed Center id</description>
    <label>New Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Center)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>