force-app/main/default/objects/Case/fields/New_Lesson_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>New_Lesson_Day_Time__c</fullName>
    <label>New Lesson Day Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>