force-app/main/default/objects/Case/fields/New_Package__c.field-meta.xml
<CustomField>
    <fullName>New_Package__c</fullName>
    <label>New Package</label>
    <length>100</length>
    <type>Text</type>
</CustomField>