force-app/main/default/objects/Case/fields/New_Package_Deposit__c.field-meta.xml
<CustomField>
    <fullName>New_Package_Deposit__c</fullName>
    <label>New Package Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>