force-app/main/default/objects/Case/fields/New_Teacher__c.field-meta.xml
<CustomField>
    <fullName>New_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Teacher)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>