force-app/main/default/objects/Case/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>To be used in reports
Booking: Package</description>
    <formula>Booking__r.Package__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package</label>
    <type>Text</type>
</CustomField>