force-app/main/default/objects/Case/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>Booking__r.Parent_First_Name__c</formula>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>