force-app/main/default/objects/Case/fields/Pending_Age__c.field-meta.xml
<CustomField>
    <fullName>Pending_Age__c</fullName>
    <formula>TODAY() -  Pending_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>