force-app/main/default/objects/Case/fields/Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Date__c</fullName>
    <description>Managed by WF</description>
    <label>Pending Date</label>
    <type>Date</type>
</CustomField>