force-app/main/default/objects/Case/fields/Po1__c.field-meta.xml
<CustomField>
    <fullName>Po1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>