force-app/main/default/objects/Case/fields/Preferred_Session__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Session__c</fullName>
    <label>Preferred Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>