force-app/main/default/objects/Case/fields/Previous_Center__c.field-meta.xml
<CustomField>
    <fullName>Previous_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for store old changed Center id</description>
    <label>Previous Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Previous Center)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>