force-app/main/default/objects/Case/fields/Previous_Lesson_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Lesson_Day_Time__c</fullName>
    <label>Previous Lesson Day Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>