force-app/main/default/objects/Case/fields/Previous_Package__c.field-meta.xml
<CustomField>
    <fullName>Previous_Package__c</fullName>
    <label>Previous Package</label>
    <length>100</length>
    <type>Text</type>
</CustomField>