force-app/main/default/objects/Case/fields/Previous_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Previous_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Teacher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Previous Teacher)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>