force-app/main/default/objects/Case/fields/Record_Type_Name_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name_For_Portal__c</fullName>
    <description>This field is mapped with Portal
To populate &apos;Staff&apos; value each time a Ticket is raised by an Employee or a Teacher
This is used in Case List views for HR and Finance</description>
    <label>Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>