force-app/main/default/objects/Case/fields/Replied_Person__c.field-meta.xml
<CustomField>
    <fullName>Replied_Person__c</fullName>
    <formula>$User.FirstName +&quot;&quot;+ $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replied Person</label>
    <type>Text</type>
</CustomField>