force-app/main/default/objects/Case/fields/Sales_Stage_Report__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_Report__c</fullName>
    <formula>Case (Stage__c,

&quot;Enquiry&quot;, &quot;01 - Enquiry&quot;,
&quot;Trial Requested&quot;, &quot;02 - Trial Requested&quot;,
&quot;Trial Booked&quot;, &quot;03 - Trial Booked&quot;,
&quot;Trial Cancelled&quot;, &quot;04 - Trial Cancelled&quot;,
&quot;Trial No Show&quot;, &quot;04 - Trial Cancelled&quot;,
&quot;Trial Attended&quot;, &quot;05 - Trial Attended&quot;,
&quot;Enrolled&quot;, &quot;06 - Enrolled&quot;,

NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Stage</label>
    <type>Text</type>
</CustomField>