force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Add &apos;Duplicate&apos; and &apos;Enquiry Lost&apos; on Nov 4th to capture more Statistic
These values will be used in Pardot going forward
Requested By: Alex and Yunshi</description>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Trial Requested</fullName>
            </value>
            <value>
                <fullName>Trial Booked</fullName>
            </value>
            <value>
                <fullName>Trial Cancelled</fullName>
            </value>
            <value>
                <fullName>Trial No Show</fullName>
            </value>
            <value>
                <fullName>Trial Attended</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Enquiry Lost</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>