force-app/main/default/objects/Case/fields/Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Status_Image__c</fullName>
    <formula>CASE( 
 Status , 
&quot;New&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwTDt&amp;oid=00D1m0000008aQN&amp;lastMod=1556536105000&quot;, &quot;New&quot;,20,68), 
&quot;Open&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwTDy&amp;oid=00D1m0000008aQN&amp;lastMod=1556536197000&quot;, &quot;Open&quot;,20,68), 
&quot;Pending&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRXI&amp;oid=00D1m0000008aQN&amp;lastMod=1556272391000&quot;, &quot;Pending&quot;,20,68), 
&quot;Closed&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRVv&amp;oid=00D1m0000008aQN&amp;lastMod=1556271610000&quot;, &quot;Closed&quot;,20,68), 
&quot;Null&quot; 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>