force-app/main/default/objects/Case/fields/Student_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name__c</fullName>
    <label>Student First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>