force-app/main/default/objects/Case/fields/Student_First_Name_Enr__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name_Enr__c</fullName>
    <formula>Enrolment__r.Student__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student First Name(Enr)</label>
    <type>Text</type>
</CustomField>